# skat

./: Cargo.toml  index.html
src/: deck.rs  game.rs  helpers.rs  lib.rs  player.rs
src/player/: ai.rs  human.rs  local.rs  mod.rs
